# shuihuoshashou

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: asr_hotwords.txt
db/postgres/: 001_core_schema.sql  002_pgvector_probe_patterns.sql
docs/: INTEGRATION_STATUS.md
libs/: __init__.py
libs/common/: __init__.py  config.py  database.py  events.py  observability.py  prompts.py  runtime.py  storage.py  tasks.py  textsim.py
libs/llm_client/: __init__.py  client.py
libs/schemas/: __init__.py  models.py
prompts/: aigc_review.md  competency_gen.md  next_options.md  probe_system.md  question_bank.md  scoring_system.md  setup_extract.md
scripts/: check_aliyun_asr.py  check_aliyun_nls_asr.py  check_llm.py  create_aliyun_nls_token.py  create_nls_vocabulary.py  diagnose_llm_auth.py  diagnose_llm_network.py  eval_scoring.py  run_gateway.py  run_offline_demo.py  run_offline_worker.py  simulate_interview.py
services/: __init__.py
services/aigc_detect_service/: __init__.py  service.py
services/asr_service/: __init__.py  aliyun_engine.py  nls_engine.py  nls_token.py  service.py
services/document_service/: __init__.py  service.py
services/gateway/: __init__.py  app.py
services/interview_orchestrator/: __init__.py  consistency.py  dialogue.py  question_flow.py  question_match.py  (+1 more)
tests/: conftest.py  test_aliyun_asr.py  test_aliyun_nls_asr.py  test_asr_service.py  test_check_llm_script.py  test_config.py  test_database.py  test_document_service.py  test_echo_suppression.py  test_gateway_api.py  test_infra_config.py  test_llm_client.py  test_observability.py  test_offline_chain.py  test_prompts.py  test_question_match.py  test_run_gateway_script.py  test_schemas.py  test_scoring_calibration.py  test_script_help.py  test_storage.py  test_tasks.py  test_textsim.py  test_v2_architecture.py
web/: index.html
(+15 files in other folders)
